--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonfile": "^6.1.0"
   },
   "type": "module",
   "name": "project-node",
